@@ -1,5 +1,16 @@
 2014-10-14  Brent Fulgham  <bfulgham@apple.com>
 
+        [Win] Unreviewed build fix after r174698 and r174709.
+
+        * platform/graphics/avfoundation/cf/CDMSessionAVFoundationCF.cpp:
+        * platform/graphics/avfoundation/cf/CDMSessionAVFoundationCF.h:
+        * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
+        (WebCore::MediaPlayerPrivateAVFoundationCF::supportsKeySystem):
+        (WebCore::AVFWrapper::shouldWaitForLoadingOfResource):
+        * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.h:
+
+2014-10-14  Brent Fulgham  <bfulgham@apple.com>
+
         [Win] Unreviewed build fix after r174698
 
         * platform/graphics/avfoundation/cf/CDMSessionAVFoundationCF.cpp:
